--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aspnet/signalr": "^1.0.4",
     "antd": "^3.10.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "devextreme": "^18.2.3",
+    "devextreme-react": "^18.2.3",
+    "jszip": "3.1.3",
+    "prop-types": "latest",
+    "quill": "1.3.6",
+    "quill-delta-to-html": "0.10.4",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
